jump img. bug fixed, fullscreen only available when game started

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ span {
   color: rgb(65, 6, 6);
 }
 
-d-none {
+.d-none {
   display: none;
 }
 
